--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,7 @@ celerybeat-schedule
 .venv
 venv/
 ENV/
+.python-version
 
 # Spyder project settings
 .spyderproject
@@ -99,3 +100,10 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+# Ignore numpy data files
+*.npy
+*.npyc
+
+# Ignore datastore, mac meta
+.DS_Store
