--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,68 @@
+alabaster==0.7.10
 appnope==0.1.0
+Babel==2.5.3
 backcall==0.1.0
 bleach==2.1.3
-certifi==2018.1.18
+certifi==2018.4.16
 chardet==3.0.4
 cycler==0.10.0
-decorator==4.2.1
+decorator==4.3.0
+docutils==0.14
 entrypoints==0.2.3
 html5lib==1.0.1
 idna==2.6
+imagesize==1.0.0
 ipykernel==4.8.2
 ipython==6.3.1
 ipython-genutils==0.2.0
 ipywidgets==7.2.1
-jedi==0.11.1
+jedi==0.12.0
 Jinja2==2.10
 jsonschema==2.6.0
 jupyter==1.0.0
 jupyter-client==5.2.3
 jupyter-console==5.2.0
 jupyter-core==4.4.0
-kaggle==1.1.0
-kiwisolver==1.0.1
+kaggle==1.3.1
 MarkupSafe==1.0
-matplotlib==2.2.2
+matplotlib==2.1.2
 mistune==0.8.3
 nbconvert==5.3.1
 nbformat==4.4.0
+networkx==2.1
 notebook==5.4.1
-numpy==1.14.2
+numpy==1.14.0
+numpydoc==0.7.0
+packaging==17.1
 pandas==0.22.0
 pandocfilters==1.4.2
-parso==0.1.1
+parso==0.2.0
 pexpect==4.5.0
 pickleshare==0.7.4
+Pillow==5.1.0
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 Pygments==2.2.0
 pyparsing==2.2.0
 python-dateutil==2.7.2
 pytz==2018.4
+PyWavelets==0.5.2
 pyzmq==17.0.0
 qtconsole==4.3.1
 requests==2.18.4
-scipy==1.0.1
+scikit-image==0.13.1
+scikit-learn==0.19.1
+scipy==1.0.0
 seaborn==0.8.1
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
+snowballstemmer==1.2.1
+Sphinx==1.7.2
+sphinxcontrib-websupport==1.0.1
 terminado==0.8.1
 testpath==0.3.1
 tornado==5.0.2
-tqdm==4.22.0
 traitlets==4.3.2
 urllib3==1.22
 wcwidth==0.1.7
