--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alabaster==0.7.10
+altair==2.0.1
 appnope==0.1.0
 Babel==2.5.3
 backcall==0.1.0
@@ -30,7 +31,7 @@ mistune==0.8.3
 nbconvert==5.3.1
 nbformat==4.4.0
 networkx==2.1
-notebook==5.4.1
+notebook==5.5.0
 numpy==1.14.0
 numpydoc==0.7.0
 packaging==17.1
@@ -62,9 +63,13 @@ Sphinx==1.7.2
 sphinxcontrib-websupport==1.0.1
 terminado==0.8.1
 testpath==0.3.1
+toolz==0.9.0
 tornado==5.0.2
 traitlets==4.3.2
+typing==3.6.4
 urllib3==1.22
+vega-datasets==0.5.0
+vega3==0.13.0
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.2.1
