--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
+absl-py==0.2.2
 alabaster==0.7.10
 altair==2.0.1
 appnope==0.1.0
+astor==0.6.2
 Babel==2.5.3
 backcall==0.1.0
-bleach==2.1.3
+bleach==1.5.0
 certifi==2018.4.16
 chardet==3.0.4
 cycler==0.10.0
 decorator==4.3.0
 docutils==0.14
 entrypoints==0.2.3
-html5lib==1.0.1
+gast==0.2.0
+grpcio==1.12.1
+h5py==2.8.0
+html5lib==0.9999999
 idna==2.6
 imagesize==1.0.0
 ipykernel==4.8.2
@@ -25,6 +30,10 @@ jupyter-client==5.2.3
 jupyter-console==5.2.0
 jupyter-core==4.4.0
 kaggle==1.3.1
+Keras==2.2.0
+Keras-Applications==1.0.2
+Keras-Preprocessing==1.0.1
+Markdown==2.6.11
 MarkupSafe==1.0
 matplotlib==2.1.2
 mistune==0.8.3
@@ -42,12 +51,14 @@ pexpect==4.5.0
 pickleshare==0.7.4
 Pillow==5.1.0
 prompt-toolkit==1.0.15
+protobuf==3.6.0
 ptyprocess==0.5.2
 Pygments==2.2.0
 pyparsing==2.2.0
 python-dateutil==2.7.2
 pytz==2018.4
 PyWavelets==0.5.2
+PyYAML==3.12
 pyzmq==17.0.0
 qtconsole==4.3.1
 requests==2.18.4
@@ -61,6 +72,9 @@ six==1.11.0
 snowballstemmer==1.2.1
 Sphinx==1.7.2
 sphinxcontrib-websupport==1.0.1
+tensorboard==1.8.0
+tensorflow==1.8.0
+termcolor==1.1.0
 terminado==0.8.1
 testpath==0.3.1
 toolz==0.9.0
@@ -72,4 +86,5 @@ vega-datasets==0.5.0
 vega3==0.13.0
 wcwidth==0.1.7
 webencodings==0.5.1
+Werkzeug==0.14.1
 widgetsnbextension==3.2.1
