Baseline with satellites (#25)
* Updated Satellites notebook, generator still needs to be made

* Updated Satellites notebook, generator still needs to be made

* Created baseline-with-satellites data generator. Also learned satellites is spelled with 2 l's.

--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,7 @@ activate
 
 # Shortcuts
 github
+activate
 
 # Ignore local articles
 articles
@@ -128,3 +129,6 @@ articles
 
 # Pyenv config
 pyenv.cfg
+
+# Misc notebooks
+*Untitled*.ipynb
