--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ grpcio==1.12.1
 h5py==2.8.0
 html5lib==0.9999999
 idna==2.6
+imageio==2.4.1
 imagesize==1.0.0
 ipykernel==4.8.2
 ipython==6.3.1
@@ -30,6 +31,9 @@ jupyter-client==5.2.3
 jupyter-console==5.2.0
 jupyter-core==4.4.0
 kaggle==1.3.1
+Keras==2.2.2
+Keras-Applications==1.0.4
+Keras-Preprocessing==1.0.2
 Markdown==2.6.11
 MarkupSafe==1.0
 matplotlib==2.1.2
